d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Error log for tracking platform errors.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>Err-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>