d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that triggered the error.</description>
    <inlineHelpText>User that triggered the error.</inlineHelpText>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>