d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Type of operation that was preformed when the error occurred.</description>
    <inlineHelpText>Type of operation that was preformed when the error occurred.</inlineHelpText>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>