d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Indicates where the error originated.</description>
    <inlineHelpText>Indicates where the error originated.</inlineHelpText>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>