d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/RequestData__c.field-meta.xml
<CustomField>
    <fullName>RequestData__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Data that was entered by user when the error occurred.</description>
    <inlineHelpText>Data that was entered by user when the error occurred.</inlineHelpText>
    <label>Request Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>