d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Name of the service that was called when the error occurred.</description>
    <inlineHelpText>Name of the service that was called when the error occurred.</inlineHelpText>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>