d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>The stack trace of a thrown exception</description>
    <inlineHelpText>The stack trace of a thrown exception</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>