d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/fields/TypeOfError__c.field-meta.xml
<CustomField>
    <fullName>TypeOfError__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Describes the error type.</description>
    <inlineHelpText>Describes the error type.</inlineHelpText>
    <label>Type Of Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>