d2c-org/d2c-core/error-handling-framework/main/default/objects/ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CurrentUser__c</columns>
    <columns>Operation__c</columns>
    <columns>ProcessName__c</columns>
    <columns>ReferenceId__c</columns>
    <columns>ServiceName__c</columns>
    <columns>TypeOfError__c</columns>
    <columns>ResponseCode__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>